[gd_scene load_steps=14 format=3 uid="uid://buxryobndeitu"]

[ext_resource type="Texture2D" uid="uid://b5ovhf86bfklw" path="res://art/tilesets/plains.png" id="1_0a225"]
[ext_resource type="Script" path="res://scripts/world.gd" id="1_0c78n"]
[ext_resource type="Texture2D" uid="uid://kxfod830ng3n" path="res://art/tilesets/grass.png" id="2_fug2d"]
[ext_resource type="Texture2D" uid="uid://bqel06die53gm" path="res://art/objects/objects.png" id="3_wur13"]
[ext_resource type="PackedScene" uid="uid://b5pugjkvajvbu" path="res://Scenes/Player.tscn" id="4_spt1i"]
[ext_resource type="PackedScene" uid="uid://xxtuh4ovapvg" path="res://Scenes/enemy.tscn" id="5_jf8dc"]
[ext_resource type="PackedScene" uid="uid://emdecg10dq6" path="res://Scenes/Water.tscn" id="7_26i62"]
[ext_resource type="PackedScene" uid="uid://cdwpr3cly7cxa" path="res://Scenes/Tree.tscn" id="8_2x2w5"]
[ext_resource type="PackedScene" uid="uid://42agjtvrm8x5" path="res://Scenes/Fallen_tree.tscn" id="9_qwmki"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y6iee"]
texture = ExtResource("1_0a225")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6pfcm"]
texture = ExtResource("2_fug2d")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g3nmj"]
texture = ExtResource("3_wur13")
0:0/0 = 0
0:0/0/y_sort_origin = 4
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 1.625, -0.125, 1.5, 6.875, 2.5, 6.875, 6.75, -1.5, 8, -5.75, 6.25)
5:0/0 = 0
5:0/0/y_sort_origin = 5
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 1.625, -0.125, 1.5, 6.625, 2.25, 0.5, 5.75)
0:1/0 = 0
0:1/0/y_sort_origin = 5
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 1.06066, -6.54074, 1.59099, -3.53553, 6.54074, 5.48008, 6.54074)
0:5/size_in_atlas = Vector2i(3, 4)
0:5/0 = 0
0:5/0/y_sort_origin = 20
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10.75, 9.25, 1, 8, 9.25, 10.75, 10.25, 25, -1.41422, 27.2236, -11.75, 22.75)
6:7/size_in_atlas = Vector2i(2, 2)
6:7/0 = 0
6:7/0/y_sort_origin = 9
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-14.1421, -1.76777, 0.35355, -3.53554, 14.4957, 0.353554, 14.4957, 11.6673, 0, 15.9099, -14.1421, 12.3744)
8:6/size_in_atlas = Vector2i(2, 3)
8:6/0 = 0
8:6/0/y_sort_origin = 17
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10.75, 9.25, 1, 8, 9.25, 10.75, 5.5, 20.25, -5.75, 20)
10:7/size_in_atlas = Vector2i(2, 2)
10:7/0 = 0
10:7/0/y_sort_origin = 5
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(11.844, 1.41421, -10.7834, 0.53033, -11.1369, 6.18718, -5.83363, 9.54594, 8, 8)

[sub_resource type="TileSet" id="TileSet_0tw1n"]
physics_layer_0/collision_layer = 3
physics_layer_0/collision_mask = 3
sources/0 = SubResource("TileSetAtlasSource_y6iee")
sources/1 = SubResource("TileSetAtlasSource_6pfcm")
sources/2 = SubResource("TileSetAtlasSource_g3nmj")

[node name="World" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_0c78n")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_0tw1n")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(0, 1, 0, 1, 1, 0, 65537, 196608, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 131076, 1, 0, 131077, 1, 0, 196614, 65536, 0, 262150, 65536, 1, 327686, 65536, 1, 131074, 1, 0, 196611, 1, 0, 327685, 1, 0, 393222, 262144, 2, 65536, 131072, 0, 131072, 65536, 1, 196608, 65536, 2, 262144, 1, 0, 327680, 1, 0, 393216, 1, 0, 393221, 131072, 0, 393223, 196608, 2, 327687, 196608, 1, 262151, 262144, 0, 196615, 131072, 0, 131079, 1, 0, 65543, 1, 0, 7, 1, 0, 6, 1, 0, 5, 1, 0, 4, 1, 0, 3, 1, 0, 2, 1, 0, 196610, 196608, 0, 196609, 327680, 2, 131073, 196608, 1, 262149, 1, 0, 196612, 1, 0, 131075, 1, 0, 65541, 1, 0, 65542, 1, 0, 131078, 1, 0, 196613, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 65536, 1, 458755, 131072, 1, 458756, 131072, 1, 458757, 262144, 0, 458758, 196608, 2, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 393225, 1, 0, 327688, 1, 0, 262152, 131072, 2, 196616, 131072, 0, 131080, 1, 0, 65544, 1, 0, 8, 1, 0, 65545, 1, 0, 131081, 1, 0, 196617, 131072, 0, 393224, 1, 0, 327689, 1, 0, 327690, 65536, 1, 262154, 327680, 2, 262153, 131072, 2, 458762, 65536, 1, 393226, 65536, 1, 524288, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 65536, 2, 589837, 327680, 0, 524301, 131072, 0, 458765, 1, 0, 393229, 1, 0, 327693, 1, 0, 262157, 1, 0, 196621, 1, 0, 131085, 1, 0, 65549, 1, 0, 13, 1, 0, 12, 1, 0, 65548, 1, 0, 131084, 1, 0, 196620, 1, 0, 262156, 1, 0, 327692, 1, 0, 327691, 196608, 1, 393227, 196608, 1, 262155, 196608, 0, 458763, 262144, 1, 524299, 131072, 2, 458764, 196608, 0, 393228, 1, 0, 524300, 327680, 2, 524298, 65536, 2, 524297, 1, 0, 524296, 1, 0, 524295, 1, 0, 524294, 1, 0, 524293, 196608, 2, 524292, 131072, 2, 524291, 131072, 2, 524290, 65536, 2, 524289, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 65536, 2, 589838, 262144, 1, 524302, 196608, 0, 458766, 1, 0, 393230, 1, 0, 327694, 1, 0, 262158, 1, 0, 196622, 1, 0, 131086, 1, 0, 65550, 1, 0, 14, 1, 0, 655374, 131072, 2, 262145, 65536, 1, 262146, 196608, 1, 262147, 1, 0, 262148, 1, 0, 327684, 1, 0, 393220, 131072, 0, 393219, 262144, 1, 393218, 327680, 0, 393217, 65536, 2, 327681, 65536, 1, 327682, 262144, 1, 327683, 196608, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 131083, 1, 0, 196619, 1, 0, 131082, 1, 0, 65546, 1, 0, 65547, 1, 0, 196618, 196608, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 65554, 1, 0, 131090, 1, 0, 196626, 1, 0, 262162, 1, 0, 327698, 1, 0, 393234, 65536, 0, 393233, 1, 0, 458769, 65536, 0, 524305, 262144, 2, 589841, 196608, 1, 589842, 1, 0, 524306, 196608, 2, 458770, 262144, 2, 655378, 1, 0, 655377, 196608, 2, 655376, 131072, 2, 655375, 131072, 2, 589839, 131072, 0, 524303, 1, 0, 458767, 1, 0, 393231, 1, 0, 327695, 1, 0, 262159, 1, 0, 196623, 1, 0, 131087, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 131089, 1, 0, 131088, 1, 0, 196624, 1, 0, 262160, 1, 0, 262161, 1, 0, 196625, 1, 0, 327697, 1, 0, 327696, 1, 0, 393232, 1, 0, 458768, 1, 0, 524304, 65536, 0, 589840, 327680, 1, 19, 1, 0, 65555, 1, 0, 131091, 1, 0, 196627, 1, 0, 196628, 1, 0, 262164, 1, 0, 327700, 1, 0, 393236, 131072, 0, 458772, 131072, 2, 524308, 1, 0, 524307, 1, 0, 589843, 1, 0, 655379, 1, 0, 655380, 1, 0, 589844, 1, 0, 131092, 1, 0, 65556, 1, 0, 20, 1, 0, 262163, 1, 0, 327699, 1, 0, 393235, 131072, 0, 458771, 131072, 2)
layer_1/name = "cliffs"
layer_1/tile_data = PackedInt32Array(65548, 65536, 4, 131084, 65536, 5, 196620, 65536, 6, 65549, 131072, 4, 131085, 131072, 5, 196621, 131072, 6, 65550, 196608, 4, 131086, 196608, 5, 196622, 196608, 6, 458759, 65536, 4, 524295, 327680, 5, 589831, 131072, 5, 458760, 131072, 4, 524296, 131072, 5, 589832, 131072, 5, 458761, 196608, 4, 524297, 196608, 5, 589833, 196608, 5, 589830, 65536, 5, 524294, 65536, 4, 655365, 65536, 4, 655366, 327680, 5, 655367, 131072, 5, 655368, 131072, 5, 655369, 262144, 5, 655370, 196608, 4)
layer_2/name = "ysort"
layer_2/y_sort_enabled = true
layer_2/z_index = 1
layer_2/tile_data = PackedInt32Array(196612, 2, 5, 655368, 2, 5, 458753, 393218, 7, 524290, 393218, 7, 589843, 393218, 7, 131088, 2, 5, 19, 2, 5, 196627, 2, 5, 262161, 524290, 6, 589824, 524290, 6, 655363, 655362, 7, 65538, 655362, 7, 393231, 655362, 7, 327693, 393218, 7, 131080, 2, 0, 65546, 2, 1, 7, 393218, 7, -65531, 393218, 7, -65526, 393218, 7, -65522, 524290, 6)

[node name="Water" parent="." instance=ExtResource("7_26i62")]
position = Vector2(176, 113)

[node name="Player" parent="." instance=ExtResource("4_spt1i")]
position = Vector2(15, 35)

[node name="enemy" parent="." instance=ExtResource("5_jf8dc")]
position = Vector2(256, 123)

[node name="Spell_missiles" type="Node2D" parent="."]

[node name="Fallen_tree_emiter" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Tree" parent="." instance=ExtResource("8_2x2w5")]
position = Vector2(109, 80)

[node name="Tree2" parent="." instance=ExtResource("8_2x2w5")]
position = Vector2(169, 82)

[node name="Fallen_tree" parent="." instance=ExtResource("9_qwmki")]
position = Vector2(69, 105)

[node name="Flame_emiter" type="Node2D" parent="."]
light_mask = 7
visibility_layer = 7
z_index = 1

[connection signal="spell_missile_object" from="Player" to="." method="_on_player_spell_missile_object"]
[connection signal="spell_missile_object" from="Player" to="Player" method="_on_spell_missile_object"]
[connection signal="fallen_tree_object" from="Tree" to="." method="_on_tree_fallen_tree_object"]
[connection signal="fallen_tree_object" from="Tree2" to="." method="_on_tree_fallen_tree_object"]
[connection signal="flame_emiter_object" from="Fallen_tree" to="." method="_on_fallen_tree_flame_emiter_object"]
